샘플 배치Job 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   batch:
     job: 
       enabled: true
-      names: sampleJob
+      names: ${job.name:NONE}
     jdbc:
       initialize-schema: never
 mybatis:
